--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -244,6 +244,6 @@
       </p>
     </footer>
   <script src="./script.js"></script>
-  <script src="../index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
